--- a/xorg/10-serverlayout.conf
+++ b/xorg/10-serverlayout.conf
@@ -1,7 +1,4 @@
 Section "ServerLayout"
 	Identifier	"Layout0"
-	Screen		0  "Screen0" 0 0
-	InputDevice	"Razer BlackWidow 2013" "CoreKeyboard"
-	InputDevice	"Razer Taipan" "CorePointer"
-	Option		"Xinerama" "0"
+	Screen		0  "Screen0"
 EndSection
