--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,65 @@
 ######## ########################
 ##
-##	thx to Gary Rowe
-##	http://goo.gl/y4dZq
-#### #####################
+##	
+##	
+##### #####################
 
-#### ############
+###### ################
 ##
 ##	System (linux)
-#### ########
+##
+#### ##########
 *~
 .svn/
 *.key
 
-#### ############
+###### ################
+##
+##	Java
+##	
+#### ##########
+*.class
+
+###### ################
+##
+##	Other
+##
+#### ##########
+*.log
+
+###### ################
 ##
 ##	System (osx)
-#### ########
+##	thx: http://goo.gl/y4dZq
+##
+#### ##########
 .DS_Store
 
-#### ############
+###### ################
 ##
 ##	Eclipse
-#### ########
+##	thx: http://goo.gl/y4dZq
+##
+#### ##########
 .classpath
 .project
 .settings/
 
-#### ############
+###### ################
 ##
 ##	Intellij
-#### ########
+##	thx: http://goo.gl/y4dZq
+##
+### ##########
 .idea/
 *.iml
 *.iws
 
-#### ############
+###### ################
 ##
 ##	Maven
-#### ########
+##	thx: http://goo.gl/y4dZq
+##
+### ##########
 log/
 target/
-
-#### ############
-##
-##	Java
-#### ########
-*.class
-
-#### ############
-##
-##	Other
-#### ########
-*.log
