much refactoring, soon finished

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 ######## ########################
 ##
-##	
+##	project related
 ##	
 ##### #####################
 
 ###### ################
 ##
-##	System (linux)
+##	system (linux)
 ##
 #### ##########
 *~
@@ -15,21 +15,21 @@
 
 ###### ################
 ##
-##	Java
+##	java
 ##	
 #### ##########
 *.class
 
 ###### ################
 ##
-##	Other
+##	other
 ##
 #### ##########
 *.log
 
 ###### ################
 ##
-##	System (osx)
+##	system (osx)
 ##	thx: http://goo.gl/y4dZq
 ##
 #### ##########
@@ -37,7 +37,7 @@
 
 ###### ################
 ##
-##	Eclipse
+##	eclipse
 ##	thx: http://goo.gl/y4dZq
 ##
 #### ##########
@@ -47,7 +47,7 @@
 
 ###### ################
 ##
-##	Intellij
+##	intellij
 ##	thx: http://goo.gl/y4dZq
 ##
 ### ##########
@@ -57,7 +57,7 @@
 
 ###### ################
 ##
-##	Maven
+##	maven
 ##	thx: http://goo.gl/y4dZq
 ##
 ### ##########
