files/rename_and_checksum added/updated - random fixes

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,33 @@
 ### ##########
 log/
 target/
+
+###### ################
+##
+##	android
+##
+### ##########
+proguard_logs/
+
+###### ################
+##
+##	gradle
+##
+### ##########
+.gradle
+/local.properties
+/.idea/workspace.xml
+.DS_Store
+
+###### ################
+##
+##	python
+##	thx: http://goo.gl/WR3a3F
+##
+### ##########
+__pycache__/
+*.py[cod]
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+.cache
